[project]
name = "dte-car"
version = "0.1.0"
description = "Reproduction package for 'On Efficient Estimation of Distributional Treatment Effects under Covariate-Adaptive Randomization'"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dte_adj>=0.1.6",
  "tqdm>=4.67.0",
  "xgboost>=3.0.0",
  "pandas>=2.3.0",
  "scikit-learn>=1.7.0",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "PLC"]
lint.ignore = ["E501"]
